<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spiromax</string>
    <string name="spiromax_">Spiro<b>Max!</b></string>
    <string name="about_boton">About</string>
    <string name="comenzar_boton">Comenzar</string>
    <string name="config_boton">Configuración</string>
    <string name="welcome">Welcome to Spiro<b>MAX!</b></string>
    <string name="nosotros_">¿Quiénes somos?</string>
    <string name="abouttext_">Somos el grupo 6 de IB2.\nNuestro equipo está conformado por: Francisco Gagna, Pedro Hernán García y Zahira Abril Jiménez.</string>
    <string name="volver">Volver</string>
    <string name="paso_1_sele"><b>PASO 1:</b></string>
    <string name="paso_2_sele"><b>PASO 2:</b></string>
    <string name="opciones"><b>OPCIONES:</b></string>
    <string name="seleccionar_disp_sele">Seleccione un dispositivo.</string>
    <string name="comience_grabar_sele">Comience a grabar</string>
    <string name="dispositivos">Ver dispositivos</string>
    <string name="desconectar">Desconectar</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="Iniciar"><b>Iniciar</b></string>
    <string name="Calibrar"><b>Calibrar</b></string>
    <string name="Anular"><b>Anular</b></string>
    <string name="Resultados"><b>Resultados</b></string>
    <string name="Ayuda"><b>¿Necesita ayuda?</b></string>
    <string name="estamos">Estamos para eso.</string>
    <string name="estamos_plus">Ingrese a nuestras Intrucciones si esta es la primera vez que realiza este estudio.</string>
    <string name="listo"><b>Listo!</b></string>
    <string name="comience_espirar_sele">Comience a espirar</string>
    <string name="time"><b>Tiempo:</b></string>
    <string name="crono"><b>6 segs</b></string>
    <string name="reint"><b>Reintentar</b></string>
    <string name="dont_stop"><![CDATA[<font color="#FF4444"><b>¡ESPIRE!</b></font>]]></string>
    <string name="sig"><b> Siguiente</b></string>
    <string name="grafs"><b> Gráficas</b></string>
    <string name="results"><b> Ver Resultados</b></string>
    <string name="save"><b> Guardar</b></string>
    <string name="volverAGrafs"><b>Ver Gráficas</b></string>
    <string name="volverMenu"><b>Volver al Menú</b></string>
    <string name="Exit"><b>Salir</b></string>
    <string name="fev1"><b>FEV1</b></string>
    <string name="fvc"><b>FVC</b></string>
    <string name="fev1Divfvc"><b>FEV1/FVC</b></string>
    <string name="pef"><b>PEF</b></string>
    <string name="resultados"><b> Resultados</b></string>
    <string name="valor"> <b> Valor</b></string>
    <string name="normal"> <b> Normal</b></string>
    <string name="contador_text_template"><b> %1$d </b><b> segs</b> </string>
    <string name="mensaje_no_detener"><b>¡ESPIRE!</b></string>
    <string name="mensaje_procesando">Procesando...</string>
    <string name="mensaje_calibrando">Calibrando...</string>
    <string name="mensaje_calibracion_finalizada">Calibración Finalizada</string>
    <string name="mensaje_finalizado">Carga finalizada.</string>
    <string name="agregar_datos">Datos del paciente:</string>
    <string name="leer_datos_del_archivo">Leer datos del archivo</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="FechNac">dd/mm/aaaa</string>
    <string name="Altura">Altura</string>
    <string name="Peso">Peso</string>
    <string name="Sexo">Sexo</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="guardar_en_lista">Agregar</string>
    <string name="leer_del_archivo">Abrir archivo</string>
    <string name="mostrar_datos">Mostrar Datos</string>
    <string name="guardar_al_archivo">Guardar archivo</string>
    <string name="lista_de_nombres">Procesando...</string>
    <string name="NuevoEstudio">Nueva Medición</string>
    <string name="EstudiosAnt">Ver Registros</string>
    <string name="CerrarSes">Cerrar Sesión</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="NombreUser">Nombre de Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="NuevoPac">Nuevo Paciente</string>
    <string name="Existente">Existente</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Guardar_Datos">Guardar</string>
    <string name="Generar_PDF">Generar PDF</string>
    <string name="Reiniciar_Medicion">Reiniciar Medición</string>
    <string name="error_message">Usuario o contraseña incorrectos</string>
    <string name="empty_data_message">Faltan datos del Paciente</string>
    <string name="Wrong_input_message">El formato de la fecha, altura o peso es incorrecto</string>
    <string name="Male_selection">Haz seleccionado Masculino</string>
    <string name="Female_selection">Haz seleccionado Femenino</string>
    <string name="loaded">PDF generado exitosamente</string>



</resources>