<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guardar_Datos">

    <TextView
        android:id="@+id/spiromax_"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#88E65C"
        android:elevation="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/spiromax_"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/lblAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="95dp"
        android:text="@string/agregar_datos"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAgregar"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAgregar"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/txtNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/FechNac"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/txtALTURA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="270dp"
        android:ems="10"
        android:hint="@string/Altura"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:hint="@string/Peso"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="370dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/male"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/female"/>
    </RadioGroup>


    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/comenzar_boton"
        android:text="@string/sig"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="133dp"
        android:background="@drawable/comenzar_boton"
        android:onClick="inVolver"
        android:text="@string/volver"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/mensajeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Volver"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="" />


</RelativeLayout>