<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paso1">

    <TextView
        android:id="@+id/spiromax_"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#88E65C"
        android:elevation="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/spiromax_"
        android:textSize="28sp" />


    <TextView
        android:id="@+id/paso_1_sele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="143dp"
        android:gravity="top"
        android:text="@string/paso_1_sele"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/seleccionar_disp_sele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="185dp"
        android:gravity="top"
        android:text="@string/seleccionar_disp_sele"
        android:textSize="18sp" />


    <Button
        android:id="@+id/dispositivos_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="240dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/comenzar_boton"
        android:text="@string/dispositivos"
        android:textSize="12sp" />

    <Button
        android:id="@+id/botonSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="500dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/comenzar_boton"
        android:text="@string/sig"
        android:textSize="12sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="570dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/comenzar_boton"
        android:text="@string/volver"
        android:textSize="12sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/desconectar_dispositivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="310dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/comenzar_boton"
        android:text="@string/desconectar"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="380dp"
        android:layout_marginRight="90dp" />

    <TextView
        android:id="@+id/msj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="400dp"
        android:gravity="top"
        android:textSize="18sp" />




</RelativeLayout>