<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones">
    <TextView
        android:id="@+id/spiromax_"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#88E65C"
        android:elevation="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/spiromax_"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/paso_1_sele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="155dp"
        android:gravity="top"
        android:text="@string/opciones"
        android:textSize="25sp" />

    <Button
        android:id="@+id/nuevoEstudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/comenzar_boton"
        android:onClick="inNuevoEst"
        android:text="@string/NuevoEstudio"
        android:textSize="12sp" />

    <Button
        android:id="@+id/CerrarSesión"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/comenzar_boton"
        android:onClick="inCerrarSes"
        android:text="@string/CerrarSes"
        android:textSize="12sp" />




</RelativeLayout>