<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <TextView
        android:id="@+id/spiromax_"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="#88E65C"
        android:elevation="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/spiromax_"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/InSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="180dp"
        android:gravity="top"
        android:text="@string/IniciarSesion"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/InSesion"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/NombreUser"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/editTextUsuario"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/IniciarSesion" />

    <TextView
        android:id="@+id/mensajeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botonIniciarSesion"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#FF0000" />


</RelativeLayout>